# ArcadeLauncher-StreamEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  THIRD_PARTY_NOTICES.md
.github/workflows/: build.yml  release.yml
docs/: ARCHITECTURE.md  BUILD.md  IPC.md  STREAMING_PLAN.md
scripts/: build_moonlight_standalone.ps1  build_sunshine_standalone.sh  ct128_build_linux.sh  ipc_smoke.ps1  repair_msys_cmake.sh  vendor.ps1  vendor.sh
src/: main.cpp
src/client/: audio_renderer.cpp  audio_renderer.h  stream_config.cpp  stream_config.h  stream_main.cpp  stream_session.cpp  stream_session.h  stream_window.cpp  stream_window.h  video_renderer.cpp  video_renderer.h
src/host/: client_trust.cpp  client_trust.h  host_apps.cpp  host_apps.h  host_main.cpp  sunshine_backend.cpp  sunshine_backend.h  sunshine_detect.cpp  sunshine_detect.h
src/ipc/: frame.cpp  frame.h  ipc.cpp  ipc.h  json.cpp  json.h  server.cpp  server.h  transport.h  transport_posix.cpp  transport_win.cpp
src/net/: gamestream_xml.cpp  gamestream_xml.h  http_client.cpp  http_client.h  identity.cpp  identity.h  identity_store.cpp  identity_store.h  nv_applist.cpp  nv_applist.h  nv_launch.cpp  nv_launch.h  nv_pairing.cpp  nv_pairing.h  pairing_crypto.cpp  pairing_crypto.h
tests/: test_gamestream_xml.cpp  test_host_apps.cpp  test_identity_store.cpp  test_ipc.cpp  test_nv_applist.cpp  test_nv_launch.cpp  test_nv_pairing.cpp  test_pairing_crypto.cpp  test_stream_config.cpp
